--- a/Javascript - Eventos/Criando um evento/index.html
+++ b/Javascript - Eventos/Criando um evento/index.html
@@ -13,7 +13,8 @@
         <p>
             Criando eventos no html por meio do Javascipt (elemento botão)
         </p>
-        <button>Clique em mim!</button>
+        <button id="btn1">Clique em mim!</button>
+        <button id="btn2">Remove evento</button>
     </section>
 
     <script src="assets/js/script.js"></script>
