--- a/Javascript - Eventos/Criando um evento/index.html
+++ b/Javascript - Eventos/Criando um evento/index.html
@@ -8,13 +8,40 @@
     <title>Javascipt - Eventos</title>
 </head>
 <body>
-    <section>
+    <section class="container">
         <h1>Primeiro evento</h1>
-        <p>
-            Criando eventos no html por meio do Javascipt (elemento botão)
-        </p>
+        <div>
+            <ul>
+                <li>Sobre</li>
+                <li>Home</li>
+                <li>Produtos</li>
+                <li>Contato</li>
+            </ul>
+        </div>
+
+            <h4>Criando eventos no html por meio do Javascipt (elemento botão)</h4>
         <button id="btn1">Clique em mim!</button>
         <button id="btn2">Remove evento</button>
+    </section>
+    <section>
+        <h2>Segundo Evento</h2>
+       
+            <div>
+                <a href="http://www.google.com.br">Google</a>
+            </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Doloribus laboriosam
+              est ab saepe alias dicta molestiae, 
+              quod ipsa optio eos voluptatem aperiam 
+              similique neque eveniet. Provident, deleniti 
+              illum? Dolores, corrupti odio, delectus 
+              similique nobis laborum inventore ut, 
+              tempora voluptas magnam quos rerum repudiandae 
+              alias ipsam saepe? Necessitatibus fugit 
+              architecto laboriosam.
+        </p>
+
     </section>
 
     <script src="assets/js/script.js"></script>
