--- a/Javascript - ES6/Arrow Function/index.html
+++ b/Javascript - ES6/Arrow Function/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <section>
-        <h1>Javascript - ES6</h1>
+        <h1>Javascript - ES6 (Arrow Function)</h1>
 
         <p>
             Lorem ipsum dolor sit amet consectetur 
